force-app/main/default/objects/Contract_Management__c/Contract_Management__c.object-meta.xml
<CustomObject>
    <description>A custom contract object to manage contracts and document expiries.</description>
    <label>Contract Management</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Management</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>