force-app/main/default/objects/Contract_Management__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>Please put in the Amount after selecting the &apos;Amount&apos; value from Amount or Percentage picklist.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>