force-app/main/default/objects/Contract_Management__c/fields/Amount_or_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Amount_or_Percentage__c</fullName>
    <label>Amount or Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>