force-app/main/default/objects/Contract_Management__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <label>Billing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>