force-app/main/default/objects/Contract_Management__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Contract Management</relationshipLabel>
    <relationshipName>Contract_Management</relationshipName>
    <type>Lookup</type>
</CustomField>