force-app/main/default/objects/Contract_Management__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact_Information__c</referenceTo>
    <relationshipLabel>Contract Management</relationshipLabel>
    <relationshipName>Contract_Management</relationshipName>
    <type>Lookup</type>
</CustomField>