force-app/main/default/objects/Contract_Management__c/fields/Contract_Expired__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expired__c</fullName>
    <description>Will be true whenever a Contract gets expired</description>
    <formula>TODAY() &gt;  EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Expired</label>
    <type>Checkbox</type>
</CustomField>