force-app/main/default/objects/Contract_Management__c/fields/Contract_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_months__c</fullName>
    <formula>FLOOR((YEAR(EndDate__c) - YEAR(StartDate__c)) * 12 + (MONTH(EndDate__c) - MONTH(StartDate__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Term (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>