force-app/main/default/objects/Contract_Management__c/fields/CustomerSignedTitle__c.field-meta.xml
<CustomField>
    <fullName>CustomerSignedTitle__c</fullName>
    <label>Customer Signed Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>