force-app/main/default/objects/Contract_Management__c/fields/Is_1_month_before_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_1_month_before_End_Date__c</fullName>
    <formula>IF(
TODAY() =  ADDMONTHS(EndDate__c,-1),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is 1 month before End Date</label>
    <type>Checkbox</type>
</CustomField>