force-app/main/default/objects/Contract_Management__c/fields/Is_2_days_before_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_2_days_before_End_Date__c</fullName>
    <description>This checkbox will be true if it is 2 days before the Contract End date.</description>
    <formula>IF(
  TODAY() = EndDate__c - 2,
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is 2 days before End Date</label>
    <type>Checkbox</type>
</CustomField>