force-app/main/default/objects/Contract_Management__c/fields/Is_3_months_before_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_3_months_before_End_Date__c</fullName>
    <formula>IF(
TODAY() = ADDMONTHS(EndDate__c,-3),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is 3 months before End Date</label>
    <type>Checkbox</type>
</CustomField>