force-app/main/default/objects/Contract_Management__c/fields/Is_6_months_before_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_6_months_before_End_Date__c</fullName>
    <formula>IF(
TODAY() = ADDMONTHS(EndDate__c,-6),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is 6 months before End Date</label>
    <type>Checkbox</type>
</CustomField>