force-app/main/default/objects/Contract_Management__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>monthly</fullName>
            </value>
            <value>
                <fullName>quarterly</fullName>
            </value>
            <value>
                <fullName>bi-yearly</fullName>
            </value>
            <value>
                <fullName>annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>