force-app/main/default/objects/Contract_Management__c/fields/SpecialTerms__c.field-meta.xml
<CustomField>
    <fullName>SpecialTerms__c</fullName>
    <label>Special Terms</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>