force-app/main/default/objects/Contract_Management__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>LOI</fullName>
            </value>
            <value>
                <fullName>Vendor Contracts</fullName>
            </value>
            <value>
                <fullName>Other Legal Contracts</fullName>
            </value>
            <value>
                <fullName>Authorization Letters</fullName>
            </value>
            <value>
                <fullName>Marketing Contracts</fullName>
            </value>
            <value>
                <fullName>Developer Contracts</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Project Marketing Contract</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Partnership Agreements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>