force-app/main/default/objects/Contract_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Is_1_month_before_End_Date__c</columns>
    <columns>Is_2_days_before_End_Date__c</columns>
    <columns>Is_3_months_before_End_Date__c</columns>
    <columns>Is_6_months_before_End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Activated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>